--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,12 @@ NOTION_DATABASE_ID=
 CHUNK_SIZE=1024
 CHUNK_OVERLAP=100
 K_SEARCH=4
+
+SUPABASE_URL=
+SUPABASE_APIKEY=
+
+QDRANT_URL=
+QDRANT_API_KEY=
+QDRANT_COLLECTION_NAME=
+
 APP_NAME='Hybris Chatbot'
